# hellorust

./: .gitignore  Cargo.toml  README.md  vercel.json
api/: health.rs  index.rs
src/: main.rs
