[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"
description = "A simple Hello World Rust web application"

[dependencies]
vercel_runtime = "0.13.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"

[profile.release]
lto = true
